unpackaged/main/default/objects/Account/fields/Dealer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Agreement__c</fullName>
    <label>Dealer Agreement (in months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>