unpackaged/main/default/objects/Account/fields/Dealer_needed__c.field-meta.xml
<CustomField>
    <fullName>Dealer_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer needed</label>
    <type>Checkbox</type>
</CustomField>