unpackaged/main/default/objects/Account/fields/Preferred_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_Terms__c</fullName>
    <label>Preferred Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30 Days</fullName>
            </value>
            <value>
                <fullName>Cash on Delivery (COD)</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>