unpackaged/main/default/objects/Account/fields/Retailer_Name__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Name__c</fullName>
    <label>Retailer Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>