unpackaged/main/default/objects/Account/recordTypes/Dealer.recordType-meta.xml
<RecordType>
    <fullName>Dealer</fullName>
    <active>true</active>
    <label>Dealer</label>
</RecordType>