unpackaged/main/default/objects/Account/listViews/Retailer.listView-meta.xml
<ListView>
    <fullName>Retailer</fullName>
    <columns>Retailer_Name__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Retailer</value>
    </filters>
    <label>Retailer</label>
</ListView>